--- a/themes/wp-unluckytech/assets/css/nav.css
+++ b/themes/wp-unluckytech/assets/css/nav.css
@@ -1,13 +1,3 @@
-body {
-    margin: 0;
-    font-family: Inter, sans-serif;
-    background-color: var(--background-color);
-    color: var(--text-color);
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
 .off-screen-menu {
     display: none;
 }
